Panini V2 is ready to work with the new Panini page. Some bugs were fixed and a logger was added