@@ -7,6 +7,7 @@ import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import xyz.krakenkat.parser.dto.ItemDTO;
+import xyz.krakenkat.parser.util.ReaderConstants;
 
 import java.util.List;
 import java.util.Objects;
@@ -14,35 +15,20 @@ import java.util.ResourceBundle;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
 public class PaniniReader implements Reader {
 
-    private String KEY;
-    private String URL;
-    private String TITLE;
-    private String PATH;
-    private Pattern PAGE_PATTERN;
-    private Pattern NUMBER_PATTERN;
-    private Pattern PAGE_NUMBER_PATTERN;
-    private Pattern TOTAL_PAGES_PATTERN;
-    private Pattern ISBN_PATTERN;
-    private Pattern BOXSET_PATTERN;
+    private String title = ResourceBundle.getBundle("application").getString("reader.title.panini");
+    private final Pattern pagePattern = Pattern.compile(ReaderConstants.PANINI_PAGE_PATTERN);
+    private final Pattern numberPattern = Pattern.compile(ReaderConstants.PANINI_NUMBER_PATTERN);
+    private final Pattern pageNumberPattern = Pattern.compile(ReaderConstants.PANINI_PAGE_NUMBER_PATTERN);
+    private final Pattern totalPagesPattern = Pattern.compile(ReaderConstants.PANINI_TOTAL_PAGES_PATTERN);
+    private final Pattern boxsetPattern = Pattern.compile(ReaderConstants.PANINI_BOXSET_PATTERN, Pattern.CASE_INSENSITIVE);
 
-    public PaniniReader() {
-        ResourceBundle rb = ResourceBundle.getBundle("system");
-        this.KEY = rb.getString("key");
-        this.URL = rb.getString("panini-url");
-        this.TITLE = rb.getString("panini-title");
-        this.PATH = rb.getString("images-path");
-        this.PAGE_PATTERN = Pattern.compile(rb.getString("panini-page-pattern"));
-        this.NUMBER_PATTERN = Pattern.compile(rb.getString("panini-number-pattern"));
-        this.PAGE_NUMBER_PATTERN = Pattern.compile(rb.getString("panini-page-number-pattern"));
-        this.TOTAL_PAGES_PATTERN = Pattern.compile(rb.getString("panini-total-pages-pattern"));
-        this.ISBN_PATTERN = Pattern.compile(rb.getString("panini-isbn-pattern"), Pattern.CASE_INSENSITIVE);
-        this.BOXSET_PATTERN = Pattern.compile(rb.getString("panini-boxset-pattern"), Pattern.CASE_INSENSITIVE);
+    public void setTitle(String title) {
+        this.title = title;
     }
 
     @Override
@@ -51,7 +37,7 @@ public class PaniniReader implements Reader {
             try {
                 Document document = Jsoup.connect(item.getLink()).get();
                 Elements additionalInfo = document.select("#more-infos .container ul.list-group li ul li");
-                item.setShortDescription(document.select("#content .details-description p").size() >= 1
+                item.setShortDescription(!document.select("#content .details-description p").isEmpty()
                         ? document.select("#content .details-description p").get(0).text()
                         : "-");
                 item.setPages(getPages(additionalInfo));
@@ -60,17 +46,17 @@ public class PaniniReader implements Reader {
                 e.printStackTrace();
             }
             return item;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public Integer getTotalPages() {
         int pages = 1;
         try {
-            Document document = Jsoup.connect(URL + TITLE).get();
+            Document document = Jsoup.connect(ReaderConstants.PANINI_BASE_URL + title).get();
             boolean isOnePage = document.select(".results *").isEmpty();
 
             if(!isOnePage) {
-                Matcher totalPages = TOTAL_PAGES_PATTERN.matcher(
+                Matcher totalPages = totalPagesPattern.matcher(
                         document.select(".results .contagempaginas").get(0).text());
                 if (totalPages.find()) {
                     return Integer.parseInt(totalPages.group(0).trim());
@@ -87,7 +73,7 @@ public class PaniniReader implements Reader {
     public List<ItemDTO> getSinglePage(Integer index) {
         try {
             String page = "&pg=" + index;
-            Document document = Jsoup.connect(URL + TITLE + page).get();
+            Document document = Jsoup.connect(ReaderConstants.PANINI_BASE_URL + title + page).get();
             Elements items = document
                     .select(".row")
                     .get(3)
@@ -97,16 +83,16 @@ public class PaniniReader implements Reader {
                     .filter(Predicate.not(this::isBoxSet))
                     .map(this::buildItem)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
 
         } catch (Exception e) {
             e.printStackTrace();
-            return null;
+            return List.of();
         }
     }
 
     private boolean isBoxSet(Element element) {
-        return BOXSET_PATTERN.matcher(element.select("p.little-desc a").text()).find();
+        return boxsetPattern.matcher(element.select("p.little-desc a").text()).find();
     }
 
     private ItemDTO buildItem(Element element) {
@@ -116,7 +102,7 @@ public class PaniniReader implements Reader {
                 .link(element.select(".description h4 a").attr("href"))
                 .number(this.getNumber(element))
                 .price(Double.parseDouble(element.select("p.price").text().substring(1)))
-                .currency("MXN")
+                .currency(ReaderConstants.MXN_CURRENCY)
                 .edition(1)
                 .variant(false)
                 .build();
@@ -127,11 +113,11 @@ public class PaniniReader implements Reader {
     }
 
     private int getNumber(Element element) {
-        Matcher matcher = NUMBER_PATTERN.matcher(this.getName(element));
+        Matcher matcher = numberPattern.matcher(this.getName(element));
         if (matcher.find()) {
             return Integer.parseInt(matcher.group(0));
         } else {
-            Matcher numberMatcher = NUMBER_PATTERN.matcher(element.select("p.little-desc a").text());
+            Matcher numberMatcher = numberPattern.matcher(element.select("p.little-desc a").text());
             if (numberMatcher.find())
                 return Integer.parseInt(numberMatcher.group(0));
             return 0;
@@ -140,24 +126,24 @@ public class PaniniReader implements Reader {
 
     private Integer getPages(Elements additionalInfo) {
         for (Element e : additionalInfo) {
-            Matcher pages = PAGE_PATTERN.matcher(e.select("strong").text());
+            Matcher pages = pagePattern.matcher(e.select("strong").text());
             if (pages.find()) {
-                Matcher numberPages = PAGE_NUMBER_PATTERN.matcher(e.text());
+                Matcher numberPages = pageNumberPattern.matcher(e.text());
                 if (numberPages.find()) {
                     return Integer.parseInt(numberPages.group(0).trim());
                 }
             }
         }
-        return 192;
+        return ReaderConstants.DEFAULT_PAGES;
     }
 
     private String getIsbn(Elements additionalInfo) {
         for (Element e : additionalInfo) {
-            Matcher isbn = ISBN_PATTERN.matcher(e.select("strong").text());
+            Matcher isbn = ReaderConstants.PANINI_ISBN_PATTERN.matcher(e.select("strong").text());
             if (isbn.find()) {
                 return e.text().split(":")[1].trim();
             }
         }
-        return "000-0000000000";
+        return ReaderConstants.DEFAULT_ISBN;
     }
 }
